Rebrand DLUHC -> MHCLG
The SoS announced a name change to revert back to
"Ministry of Housing, Communities and Local Government" - this changes:
 * dluhc -> mhclg
 * DLUHC -> MHCLG
 * "Department for Levelling Up, Housing and Communities" -> "Ministry of Housing, Communities and Local Government"

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,14 +1,14 @@
 ---
-title: The DLUHC Way
+title: The MHCLG Way
 ---
 
 <% content_for :sidebar do %>
 <ul>
-    <li><a href='#the-dluhc-way'>The DLUHC Way</a>
+    <li><a href='#the-mhclg-way'>The MHCLG Way</a>
         <ul>
-            <li><a href='#about-the-dluhc-way'>About the DLUHC Way</a></li>
+            <li><a href='#about-the-mhclg-way'>About the MHCLG Way</a></li>
             <li><a href='#how-to-add-new-guidance'>How to add new guidance</a></li>
-            <li><a href='#the-dluhc-way-forum'>The DLUHC Way Forum</a></li>
+            <li><a href='#the-mhclg-way-forum'>The MHCLG Way Forum</a></li>
         </ul>
     </li>
     <li><a href="#software-development">Software development</a>
@@ -31,23 +31,23 @@ title: The DLUHC Way
 
 # <%= current_page.data.title %>
 
-The DLUHC Way guides teams to build and operate brilliant, cost-effective digital services.
+The MHCLG Way guides teams to build and operate brilliant, cost-effective digital services.
 
-It documents the specific technology, tools and processes that Department for Levelling Up, Housing and Communities (DLUHC) teams use.
+It documents the specific technology, tools and processes that Ministry of Housing, Communities and Local Government (MHCLG) teams use.
 
-It's not intended as guidance for anyone working outside DLUHC - you'll find that in the [Service Manual](https://www.gov.uk/service-manual).
+It's not intended as guidance for anyone working outside MHCLG - you'll find that in the [Service Manual](https://www.gov.uk/service-manual).
 
-## About The DLUHC Way
+## About The MHCLG Way
 
-The DLUHC Way shares agreed ways of working so service teams benefit from:
+The MHCLG Way shares agreed ways of working so service teams benefit from:
 
 * using similar tools
 * central procurement
 * costs savings as new teams will be cheaper to spin up
 
-The DLUHC Way makes it easier for projects to get started while still giving teams flexibility to do something different if their project needs it.
+The MHCLG Way makes it easier for projects to get started while still giving teams flexibility to do something different if their project needs it.
 
-The DLUHC Way includes consistent:
+The MHCLG Way includes consistent:
 
 * terminology
 * ways of working
@@ -56,19 +56,19 @@ The DLUHC Way includes consistent:
 
 All decisions are made in alignment with [Service Manual](https://www.gov.uk/service-manual), which covers service design more broadly, and the [Technology Code of Practice](https://www.gov.uk/guidance/the-technology-code-of-practice).
 
-Products at DLUHC in discovery or alpha development phases must follow [agile delivery principles](https://www.gov.uk/service-manual/agile-delivery) and also have the option to follow the standards in this repository.
+Products at MHCLG in discovery or alpha development phases must follow [agile delivery principles](https://www.gov.uk/service-manual/agile-delivery) and also have the option to follow the standards in this repository.
 
 Products in beta and live phases must follow both the instructions set out in the Service Manual and the standards in this repository.
 They must be [secure by design](https://www.security.gov.uk/guidance/secure-by-design/).
 
 ## How to add new guidance
 
-Contribute to this repository by making a pull request in [GitHub](https://github.com/communitiesuk/dluhc-way) for discussion at the DLUHC Way Forum.
+Contribute to this repository by making a pull request in [GitHub](https://github.com/communitiesuk/mhclg-way) for discussion at the MHCLG Way Forum.
 
 You can also read the service manual to find out about
 [learning about and writing user needs](https://www.gov.uk/service-manual/user-research/start-by-learning-user-needs).
 
-You can also read the DLUHC intranet to find out about
+You can also read the MHCLG intranet to find out about
 [writing useful and inclusive content for your users] (https://intranet.levellingup.gov.uk/task/content-design-guidance/).
 
 Thank you for your contributions as we develop this repository.
@@ -103,21 +103,21 @@ What specific bits of software (commercial or open source) do
 we use to help us do this thing?
 ```
 
-## The DLUHC Way Forum
+## The MHCLG Way Forum
 
-This site documents some of the decisions agreed at the DLUHC Way Forum about the products we operate.
+This site documents some of the decisions agreed at the MHCLG Way Forum about the products we operate.
 
-The DLUHC Forum meets once a month. The Forum is lead developers and technical architects representing DLUHC programmes who are responsible for communicating and implementing the DLUHC Way.
+The MHCLG Forum meets once a month. The Forum is lead developers and technical architects representing MHCLG programmes who are responsible for communicating and implementing the MHCLG Way.
 
 The Forum reviews:
 
-* all DLUHC Way open and closed PRs
+* all MHCLG Way open and closed PRs
 * expired guidance and if it should be continued
 * possible subject areas and ownership of new content
 
-### Contact The DLUHC Way Forum
+### Contact The MHCLG Way Forum
 
-Contact the DLUHC Way Forum using the [#dluhc-way Slack channel](https://communities-govuk.slack.com/messages/dluhc-way/).
+Contact the MHCLG Way Forum using the [#mhclg-way Slack channel](https://communities-govuk.slack.com/messages/mhclg-way/).
 
 ## Software development
 
