--- a/source/layouts/custom.erb
+++ b/source/layouts/custom.erb
@@ -1,6 +1,6 @@
 <% wrap_layout :layout do %>
   <div class="page-banner">
-    <p><strong>The DLUHC Way and its content is intended for internal use by the DLUHC community.</strong></p>
+    <p><strong>The MHCLG Way and its content is intended for internal use by the MHCLG community.</strong></p>
   </div>
 
   <%= yield %>
