--- a/source/manuals/code-review-guidelines.html.md.erb
+++ b/source/manuals/code-review-guidelines.html.md.erb
@@ -86,7 +86,7 @@ The Service Manual contains guidance about [deploying software][].
 
 Before you approve a PR, you should consider if it affects any existing documentation. You should make sure the PR's documentation is clear and unambiguous, and in the right place.
 
-If you want to learn more about writing clearly for technical audiences you can contact DLUHC technical writers using the [#gds-technical-writing Slack channel][].
+If you want to learn more about writing clearly for technical audiences you can contact MHCLG technical writers using the [#gds-technical-writing Slack channel][].
 
 ## Further reading
 
