--- a/source/manuals/licensing.html.md.erb
+++ b/source/manuals/licensing.html.md.erb
@@ -45,7 +45,7 @@ README under a ‘Licence’ heading.
 
 ### Use MIT
 
-At DLUHC we use the [MIT License][mit-license].
+At MHCLG we use the [MIT License][mit-license].
 
 Make sure the licence content is included in full, including the title "The MIT
 License", so that readers are quickly able to see what licence is being used.
@@ -70,20 +70,20 @@ There is a good example of a licence in the [pay-adminusers][pay-licence] repo.
 
 ## Guidelines for repositories that are open documentation
 
-Some repositories will produce websites serving documentation. The DLUHC Way is
+Some repositories will produce websites serving documentation. The MHCLG Way is
 an example of this. In addition to the MIT License for the code in the
 repository, you should include the [Open Government Licence (OGL)][ogl-licence]
 for the documentation.
 
 ### Example
 
-The [DLUHC Way][the-dluhc] repo is a good example of licensing open documentation.
+The [MHCLG Way][the-mhclg] repo is a good example of licensing open documentation.
 
 [mit-license]: https://opensource.org/licenses/MIT
 [uk-fact-sheet]: https://copyrightservice.co.uk/copyright/p03_copyright_notices
 [pay-licence]: https://github.com/alphagov/pay-adminusers/blob/master/LICENCE
 [ogl-licence]: https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/
-[the-dluhc]: https://github.com/alphagov/the-dluhc
+[the-mhclg]: https://github.com/alphagov/the-mhclg
 [gh-licence-guidance]: https://docs.github.com/en/communities/setting-up-your-project-for-healthy-contributions/adding-a-license-to-a-repository#including-an-open-source-license-in-your-repository
 [readme]: /manuals/readme-guidance.html
 [guardian-style]: https://www.theguardian.com/guardian-observer-style-guide-l
