--- a/source/manuals/programming-languages.html.md.erb
+++ b/source/manuals/programming-languages.html.md.erb
@@ -23,7 +23,7 @@ review_in: 12 months
 <% end %>
 
 <div class="page-banner">
-    <p><strong>The DLUHC Way and its content is intended for internal use by the DLUHC and CO CDIO communities.</strong></p>
+    <p><strong>The MHCLG Way and its content is intended for internal use by the MHCLG and CO CDIO communities.</strong></p>
 </div>
 
 # <%= current_page.data.title %>
@@ -35,7 +35,7 @@ You should read this guide alongside the
 
 Developers read code much more often than they write it. These guidelines
 are intended to improve the readability of code and make it consistent
-across DLUHC projects.
+across MHCLG projects.
 
 A style guide is about consistency. Consistency with this style guide is
 important. Consistency within a project is more important. Consistency within
