--- a/source/manuals/programming-languages/css.html.md.erb
+++ b/source/manuals/programming-languages/css.html.md.erb
@@ -2,7 +2,7 @@
 title: CSS coding style
 last_reviewed_on: 2000-01-01
 review_in: 12 months
-owner_slack: '#dluhc-way'
+owner_slack: '#mhclg-way'
 ---
 
 # <%= current_page.data.title %>
@@ -17,7 +17,7 @@ owner_slack: '#dluhc-way'
 
 ## Linting
 
-Your project should conform to DLUHC CSS/Sass linting rules, these are published as a [stylelint](https://stylelint.io) configuration: [stylint-config-gds](https://github.com/alphagov/stylelint-config-gds).
+Your project should conform to MHCLG CSS/Sass linting rules, these are published as a [stylelint](https://stylelint.io) configuration: [stylint-config-gds](https://github.com/alphagov/stylelint-config-gds).
 
 ## Whitespace
 
