--- a/source/manuals/programming-languages/docker.html.md.erb
+++ b/source/manuals/programming-languages/docker.html.md.erb
@@ -8,7 +8,7 @@ review_in: 6 months
 
 This style guide:
 
-* provides some conventions for creating production-ready Dockerfiles at DLUHC
+* provides some conventions for creating production-ready Dockerfiles at MHCLG
 * supplements the official [Dockerfile reference](https://docs.docker.com/engine/reference/builder/)
 
 ## Using tags and digests in FROM instructions
