--- a/source/manuals/programming-languages/html.html.md.erb
+++ b/source/manuals/programming-languages/html.html.md.erb
@@ -2,7 +2,7 @@
 title: HTML coding style
 last_reviewed_on: 2000-01-01
 review_in: 12 months
-owner_slack: '#dluhc-way'
+owner_slack: '#mhclg-way'
 ---
 
 # <%= current_page.data.title %>
@@ -14,7 +14,7 @@ to support](https://www.gov.uk/service-manual/technology/designing-for-different
 Tools such as GOV.UK Frontend, that are used to help build services, may have
 [stricter standards of browser support](https://github.com/alphagov/govuk-frontend#browser-support).
 Therefore, you will need to test your code in different browsers depending on
-which part of DLUHC you are working in.
+which part of MHCLG you are working in.
 
 Your page should work with only HTML, before adding any CSS or JavaScript. Read
 [building a resilient frontend using progressive enhancement](https://www.gov.uk/service-manual/technology/using-progressive-enhancement).
