--- a/source/manuals/programming-languages/ruby.html.md.erb
+++ b/source/manuals/programming-languages/ruby.html.md.erb
@@ -2,7 +2,7 @@
 title: Ruby style guide
 last_reviewed_on: 2000-01-01
 review_in: 12 months
-owner_slack: '#dluhc-way'
+owner_slack: '#mhclg-way'
 ---
 
 # <%= current_page.data.title %>
@@ -12,7 +12,7 @@ owner_slack: '#dluhc-way'
 The GOV.UK programme publishes and maintains a gem, [rubocop-govuk], which
 provides linting rules for Ruby projects. These rules extend those described
 in [rubystyle.guide]. The rubocop-govuk project has overriden rules to either
-match DLUHC style precedence or to handle scenarios where rules were problematic
+match MHCLG style precedence or to handle scenarios where rules were problematic
 to adopt.
 
 [rubocop-govuk] also includes rules for [Rake], [RSpec] and [Ruby on Rails].
@@ -22,7 +22,7 @@ have proved problematic have been overriden.
 
 ## Conventional tooling
 
-DLUHC uses the [MRI][mri-ruby] implementation of Ruby in projects. You should not
+MHCLG uses the [MRI][mri-ruby] implementation of Ruby in projects. You should not
 adopt a different one (such as [jRuby]) for projects without clear justification.
 The recommended tool for managing multiple Ruby installations is [rbenv].
 For dependendency management [bundler] should be used.
