--- a/source/manuals/readme-guidance.html.md.erb
+++ b/source/manuals/readme-guidance.html.md.erb
@@ -6,7 +6,7 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
-There should be a README for every DLUHC GitHub repository. A user expects a README to help them:
+There should be a README for every MHCLG GitHub repository. A user expects a README to help them:
 
 * understand what the project is
 * evaluate whether the project is useful for them
@@ -25,10 +25,10 @@ A README should be an overview and list of instructions to help someone get star
 
 If you find yourself writing a lot of content for your README, consider moving some of the more detailed documentation, such as API reference information or configuration advice, into a separate document.
 
-Some project teams at DLUHC like to include these in a `docs` folder within the same repository and link to them from the README.
+Some project teams at MHCLG like to include these in a `docs` folder within the same repository and link to them from the README.
 
 ## Structuring your README
-Use the [communitiesuk template](https://github.com/communitiesuk/readme-template/blob/main/README.md) for DLUHC READMEs.
+Use the [communitiesuk template](https://github.com/communitiesuk/readme-template/blob/main/README.md) for MHCLG READMEs.
 
 ## Test your documentation
 
