--- a/source/manuals/release-notes.html.md.erb
+++ b/source/manuals/release-notes.html.md.erb
@@ -48,7 +48,7 @@ You should avoid:
 - the passive voice
 - images
 
-You should also [write a README for DLUHC repositories](/manuals/readme-guidance.html).
+You should also [write a README for MHCLG repositories](/manuals/readme-guidance.html).
 
 ## Using code examples
 
@@ -72,7 +72,7 @@ Lead into a code example with either:
     <div data-module="assets-section">
     ```
 
-## Guidance outside DLUHC
+## Guidance outside MHCLG
 
 You can find more information from:
 
