--- a/source/standards/accounts-with-third-parties.html.md.erb
+++ b/source/standards/accounts-with-third-parties.html.md.erb
@@ -6,7 +6,7 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
-Your DLUHC team probably uses third-party tools to develop a service, such as [GitHub](#managing-github-accounts) and [logit](#managing-logit-accounts). Follow this guidance to manage access to any associated accounts.
+Your MHCLG team probably uses third-party tools to develop a service, such as [GitHub](#managing-github-accounts) and [logit](#managing-logit-accounts). Follow this guidance to manage access to any associated accounts.
 
 When managing third-party service accounts ensure:
 
@@ -20,7 +20,7 @@ You’re likely to need a set of credentials to gain access to your third-party 
 
 When managing these credentials, you must:
 
-* keep the number of secrets you have to a minimum - this reduces the number of credentials to revoke when someone leaves DLUHC (passwords are particularly problematic secrets, other secrets such as secret access keys or OAuth tokens are more easily rotated)
+* keep the number of secrets you have to a minimum - this reduces the number of credentials to revoke when someone leaves MHCLG (passwords are particularly problematic secrets, other secrets such as secret access keys or OAuth tokens are more easily rotated)
 * never use credentials associated with another individual
 * encourage the rest of your team to avoid sharing credentials unnecessarily (technical limitations may mean this is sometimes unavoidable)
 
@@ -31,8 +31,8 @@ Often third-party services natively support organisation or team level access, f
 With team or organisation-level accounts, where possible you should:
 
 * create separate accounts for each individual, rather than share credentials
-* use a single-sign-on provider rather than create an account with a separate username and password - preferably use G Suite as it’s a core part of the DLUHC leaver process, which means that access to linked third-party services will be revoked automatically when someone leaves
-* make sure that you have a documented process for removing individuals’s access when they leave DLUHC
+* use a single-sign-on provider rather than create an account with a separate username and password - preferably use G Suite as it’s a core part of the MHCLG leaver process, which means that access to linked third-party services will be revoked automatically when someone leaves
+* make sure that you have a documented process for removing individuals’s access when they leave MHCLG
 
 ### Managing accounts with individual-level access
 
@@ -41,12 +41,12 @@ When services do not support organisation-level access, you may have to share in
 Sharing individuals’ sign-on credentials can create risks as:
 
 * you do not always know who can access a service (particularly if users only access a service rarely because you can forget who has access)
-* the last person with account credentials may leave DLUHC, making it impossible for others to access a service in future
+* the last person with account credentials may leave MHCLG, making it impossible for others to access a service in future
 
 To reduce these risks, you should:
 
 * create an account using a Google Group email address rather than an individual’s email address
-* set posting permissions to ‘public’ so your group can receive emails from outside DLUHC
+* set posting permissions to ‘public’ so your group can receive emails from outside MHCLG
 * set viewing topic permissions to ‘all members of the group’ so only users with access to a service are able to view posts
 * [store passwords in your team’s shared credential store](/standards/storing-credentials.html)
 * use two-factor authentication
@@ -54,9 +54,9 @@ To reduce these risks, you should:
 
 ## Managing GitHub accounts
 
-When you join DLUHC, you will need a GitHub account. You can either use your personal account or create a new account. Either way, please [add your @digital.cabinet-office.gov.uk email address to your GitHub account](https://github.com/settings/emails). You do not need to make it the primary address or public.
+When you join MHCLG, you will need a GitHub account. You can either use your personal account or create a new account. Either way, please [add your @digital.cabinet-office.gov.uk email address to your GitHub account](https://github.com/settings/emails). You do not need to make it the primary address or public.
 
-Each DLUHC team should have someone (usually a technical lead) who is an owner and can grant/revoke access to their repositories.
+Each MHCLG team should have someone (usually a technical lead) who is an owner and can grant/revoke access to their repositories.
 
 ## Managing Logit accounts
 
@@ -64,4 +64,4 @@ Use Google Apps Marketplace when you sign into Logit (this is the only available
 
 ## Managing Amazon Web Services (AWS) accounts
 
-The DLUHC Way provides [guidance on how to access an AWS account, create a new account and account management](/manuals/working-with-aws-accounts.html).
+The MHCLG Way provides [guidance on how to access an AWS account, create a new account and account management](/manuals/working-with-aws-accounts.html).
