--- a/source/standards/logging.html.md.erb
+++ b/source/standards/logging.html.md.erb
@@ -16,11 +16,11 @@ visualisation, alerting, and reporting.
 
 Your product should have a proportionate design for short and long term storage of logs and ensuring the Confidentiality, Integrity, and Availability of logs.
 
-The NCSC Cyber Assessment Framework, which DLUHC must comply with, has an entire category dedicated to [Security Monitoring].
+The NCSC Cyber Assessment Framework, which MHCLG must comply with, has an entire category dedicated to [Security Monitoring].
 
 ### Logit deprecation notice
 
-The shared DLUHC [Logit] account can still be used for existing environments;
+The shared MHCLG [Logit] account can still be used for existing environments;
 however, you should use Splunk for new logging requirements.
 
 Logit offers cloud-based on-demand, shared
@@ -97,7 +97,7 @@ field extracts] configured in Splunk.
 For interoperability with pre-built apps and alerting, it is beneficial to align
 your logs to the [Splunk CIM (Common Information Model)].
 
-The [`Web` CIM] is most commonly used at DLUHC - it specifies particular field
+The [`Web` CIM] is most commonly used at MHCLG - it specifies particular field
 names for data, for example:
 
   - `http_user_agent` for the client's user agent
@@ -106,7 +106,7 @@ names for data, for example:
 
 ## Access to Splunk
 
-Access control for DLUHC users is managed by the IT Service Desk, use the
+Access control for MHCLG users is managed by the IT Service Desk, use the
 [helpdesk] to request access. If you're unsure what role you should be
 requesting, ask in the `#cyber-security-help` Slack channel.
 
