--- a/source/standards/naming-software-products.html.md.erb
+++ b/source/standards/naming-software-products.html.md.erb
@@ -14,13 +14,13 @@ Avoid using puns or branding for names as this makes it difficult for others to 
 
 Make sure you use the same name consistently whenever you're referring to the same product. For example the name of the Delta application’s GitHub repository is [communitiesuk/delta](https://github.com/communitiesuk/delta).
 
-These DLUHC product names clearly communicate their purpose:
+These MHCLG product names clearly communicate their purpose:
 
 - [Find an energy certificate](https://www.gov.uk/find-energy-certificate)
 - [Register to vote](https://www.gov.uk/register-to-vote)
 - [Submit social housing lettings and sales data](https://submit-social-housing-data.levellingup.gov.uk/)
 
-These DLUHC product names are ambiguous and possibly confusing:
+These MHCLG product names are ambiguous and possibly confusing:
 
 - [Delta](https://delta.communities.gov.uk)
 - [E-CLAIMS](https://eclaims.communities.gov.uk/esif-web/login)
