--- a/source/standards/operating-systems.html.md.erb
+++ b/source/standards/operating-systems.html.md.erb
@@ -16,7 +16,7 @@ Amazon Linux 2 was forked from `RHEL`/`CentOS` and the primary package manager i
 
 If you're not using AWS, or you need to use a Debian-based OS, you should use [Ubuntu LTS](https://ubuntu.com/download/server) as an OS for your virtual machine (VM).
 
-DLUHC recommends using Long Term Support (LTS) versions as the default choice for your VM OS. If you're running the latest LTS release and there are newer features not available in that release, such as newer kernels, consider using the official backports or trustworthy PPA sources rather than upgrading the whole OS to a standard (non-LTS) release.
+MHCLG recommends using Long Term Support (LTS) versions as the default choice for your VM OS. If you're running the latest LTS release and there are newer features not available in that release, such as newer kernels, consider using the official backports or trustworthy PPA sources rather than upgrading the whole OS to a standard (non-LTS) release.
 
 You must make sure these backports and other sources receive regular and timely security updates. This should be less of a burden than having to update the OS on VMs every 6 to 9 months.
 
