--- a/source/standards/optimise-frontend-perf.html.md.erb
+++ b/source/standards/optimise-frontend-perf.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to optimise frontend performance
-owner_slack: '#dluhc-way'
+owner_slack: '#mhclg-way'
 last_reviewed_on: 2000-01-01
 review_in: 6 months
 ---
