--- a/source/standards/pair-programming.html.md.erb
+++ b/source/standards/pair-programming.html.md.erb
@@ -5,7 +5,7 @@ review_in: 6 months
 ---
 # <%= current_page.data.title %>
 
-DLUHC advocates for agile software development practices because we believe that flexibility and responsiveness-to-change are key to building software that meets the needs of our users.
+MHCLG advocates for agile software development practices because we believe that flexibility and responsiveness-to-change are key to building software that meets the needs of our users.
 
 At the core of agile software development is the understanding that fast feedback loops enhance speed and quality, and one way for developers in the team to get quick feedback on the quality of their software design is the practice of pair programming.
 
@@ -21,10 +21,10 @@ The continuous discussion and review that pairing introduces, compared to a non-
 [Another study](https://collaboration.csc.ncsu.edu/laurie/Papers/XPSardinia.PDF) found that pair programming reduces development and staffing risk, enhances technical skills and improves team communications.
 
 Pair programming is a practical way of building collective code ownership between members of the team.
-Distributing the understanding of the service being built means that teams are more resilient to people being ill, on leave, or leaving DLUHC, and as such are less likely to have delivery hiccups from sudden loss of expertise.
+Distributing the understanding of the service being built means that teams are more resilient to people being ill, on leave, or leaving MHCLG, and as such are less likely to have delivery hiccups from sudden loss of expertise.
 
 Pairing people of [different levels of expertise](https://www.youtube.com/watch?v=lvs7VEsQzKY&t=317s) is an effective way of mentoring and fostering career development.
-For example, pairing someone new to DLUHC with an experienced developer within the team will benefit both; upskilling the new joiner, and reinforcing the knowledge of the experienced person by teaching them.
+For example, pairing someone new to MHCLG with an experienced developer within the team will benefit both; upskilling the new joiner, and reinforcing the knowledge of the experienced person by teaching them.
 
 ## Working effectively as a pair
 
@@ -60,8 +60,8 @@ People in teams that have embraced concepts like [psychological safety](https://
 
 ## Reviewing code as a pair
 
-The standard approach to code review in DLUHC is that teams should use a pull-request (PR) process to ensure that all code is reviewed by another person.
-A pair can approve their own PRs on codebases where changes require an additional review, which is the vast majority of codebases at DLUHC.
+The standard approach to code review in MHCLG is that teams should use a pull-request (PR) process to ensure that all code is reviewed by another person.
+A pair can approve their own PRs on codebases where changes require an additional review, which is the vast majority of codebases at MHCLG.
 
 This has several benefits, such as:
 
@@ -74,4 +74,4 @@ However, teams should adjust their policy on this approach depending on the risk
 ## Further reading
 
 - Pairing and code review guidelines for [GOV.UK Pay](https://manual.payments.service.gov.uk/manual/development-processes/pairing-principles.html)
-- Code review guidelines in the [DLUHC Way](https://the-dluhc.digital.cabinet-office.gov.uk/standards/pull-requests.html#reviewing-a-request)
+- Code review guidelines in the [MHCLG Way](https://the-mhclg.digital.cabinet-office.gov.uk/standards/pull-requests.html#reviewing-a-request)
