--- a/source/standards/principle-least-access.html.md.erb
+++ b/source/standards/principle-least-access.html.md.erb
@@ -8,7 +8,7 @@ review_in: 6 months
 
 The [principle of least privilege][polp] involves setting up user accounts so they can only access and use the information they need for specific tasks. This can also apply to processes and individuals who might have to switch between normal access and the increased access of a superuser account as part of their work.
 
-All access provisioned for use within DLUHC must be provided on a least privilege basis
+All access provisioned for use within MHCLG must be provided on a least privilege basis
 
 Examples of privileged or higher security access are:
 
