--- a/source/standards/programming-languages.html.md.erb
+++ b/source/standards/programming-languages.html.md.erb
@@ -6,7 +6,7 @@ review_in: 12 months
 
 # <%= current_page.data.title %>
 
-We use a range of programming languages at DLUHC because we think
+We use a range of programming languages at MHCLG because we think
 using the right tool for the job gives us the best chance of building
 services that best meet users’ needs. This document does not apply to
 choosing 'off the shelf' software (open source or not).
@@ -30,7 +30,7 @@ The Service Manual has information on
 [nodejs]: https://nodejs.org/
 [manual_js]: https://www.gov.uk/service-manual/technology/using-progressive-enhancement
 
-DLUHC projects using Node.js include:
+MHCLG projects using Node.js include:
 
 - [GOV.UK Frontend](https://github.com/alphagov/govuk-frontend)
 - [GOV.UK Pay](https://www.payments.service.gov.uk/)
@@ -80,7 +80,7 @@ production.
 
 We used Java in the development of Delta and E-CLAIMS. These are the only remaining
 applications written in Java, but we've found it hard to support because of a lack
-of skills in DLUHC. Do not use Java for new projects.
+of skills in MHCLG. Do not use Java for new projects.
 
 ## Using other languages
 
