--- a/source/standards/pull-requests.html.md.erb
+++ b/source/standards/pull-requests.html.md.erb
@@ -9,7 +9,7 @@ Pull requests (PRs) let you tell others about changes you've pushed to a branch 
 
 ## Why should you use pull requests?
 
-We use [PRs][prs] at DLUHC to:
+We use [PRs][prs] at MHCLG to:
 
 - enable [code review](/manuals/code-review-guidelines.html) from colleagues
 - provide a lightweight change management process
