--- a/source/standards/sending-email.html.md.erb
+++ b/source/standards/sending-email.html.md.erb
@@ -6,11 +6,11 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
-At DLUHC you should use the following standards for sending email notifications to service users and engineers.
+At MHCLG you should use the following standards for sending email notifications to service users and engineers.
 
 ## How to send notifications to users
 
-Use [GOV.UK Notify](https://www.notifications.service.gov.uk/) when sending notifications to users from a DLUHC service, for example password resets and confirmation emails.
+Use [GOV.UK Notify](https://www.notifications.service.gov.uk/) when sending notifications to users from a MHCLG service, for example password resets and confirmation emails.
 
 There's a [complete feature list](https://www.notifications.service.gov.uk/features) available of what you can do with GOV.UK Notify, and you can also register for [a Notify account](https://www.notifications.service.gov.uk/register) here.
 
