--- a/source/standards/source-code/index.html.md.erb
+++ b/source/standards/source-code/index.html.md.erb
@@ -6,7 +6,7 @@ review_in: 12 months
 
 # <%= current_page.data.title %>
 
-At DLUHC, we follow the principles set out in the Service Manual for managing the code we write by:
+At MHCLG, we follow the principles set out in the Service Manual for managing the code we write by:
 
 - [using version control](https://www.gov.uk/service-manual/technology/maintaining-version-control-in-coding)
 - [making source code open](https://www.gov.uk/service-manual/technology/making-source-code-open-and-reusable)
