--- a/source/standards/source-code/use-github.html.md.erb
+++ b/source/standards/source-code/use-github.html.md.erb
@@ -6,7 +6,7 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
-DLUHC uses the [alphagov] organisation on [GitHub] to collaborate on code. The GOV.UK One Login programme uses [govuk-one-login].
+MHCLG uses the [alphagov] organisation on [GitHub] to collaborate on code. The GOV.UK One Login programme uses [govuk-one-login].
 
 ### Getting access to `alphagov`
 
@@ -16,7 +16,7 @@ All github user accounts added to `alphagov` *must* be [connected](https://docs.
 
 You must also set up two-factor authentication on your account.
 
-To join `alphagov` ask your tech lead or technical architect to invite you. Make sure you've connected your DLUHC email address to your account first, otherwise your account will be removed.
+To join `alphagov` ask your tech lead or technical architect to invite you. Make sure you've connected your MHCLG email address to your account first, otherwise your account will be removed.
 
 ### Configuring GitHub repositories
 
@@ -76,7 +76,7 @@ To access enterprise support you need either to be an enterprise admin or have b
 
 #### Request support
 
-If you are not already an enterprise admin or have a support entitlement on your GitHub user you will first need to ask one of the enterprise admins to be given permissons to access the support portal. You can do this by emailing the [DLUHC GitHub enterprise owners google group].
+If you are not already an enterprise admin or have a support entitlement on your GitHub user you will first need to ask one of the enterprise admins to be given permissons to access the support portal. You can do this by emailing the [MHCLG GitHub enterprise owners google group].
 
 Once you've been given permission, you can view and raise support requests using GitHub's [support portal].
 
@@ -84,7 +84,7 @@ You should use your `@digital.cabinet-office.gov.uk` email during the sign up pr
 
 [GitHub enterprise support agreement]: https://help.github.com/en/github/working-with-github-support/github-enterprise-cloud-support
 [support portal]: https://support.github.com/
-[DLUHC GitHub enterprise owners google group]: mailto:gds-github-enterprise-owners@digital.cabinet-office.gov.uk
+[MHCLG GitHub enterprise owners google group]: mailto:gds-github-enterprise-owners@digital.cabinet-office.gov.uk
 
 ## See also
 
