--- a/source/standards/storing-credentials.html.md.erb
+++ b/source/standards/storing-credentials.html.md.erb
@@ -16,7 +16,7 @@ Personal credentials belong only to you. They uniquely identify you and grant ac
 
 If you are unable to use your browser's password manager then you should use a third-party password manager. This could be necessary if your browser has an accessibility issue, or if you work with multiple browsers.
 
-Third-party password managers used by people at DLUHC include:
+Third-party password managers used by people at MHCLG include:
 
 - [**1Password**](https://1password.com/)
 - [**BitWarden**](https://bitwarden.com/) - An open source password manager.
@@ -33,7 +33,7 @@ Credentials sometimes need to be shared across a team or programme. Software rep
 
 [You should follow the guidance for managing team credentials.](/standards/accounts-with-third-parties.html).
 
-We have no established best practice for storing shared credentials at DLUHC. Some teams have a "credentials" GitHub repository and use [pass](https://www.passwordstore.org/) or [blackbox](https://github.com/StackExchange/blackbox) to store credentials encrypted with GPG.
+We have no established best practice for storing shared credentials at MHCLG. Some teams have a "credentials" GitHub repository and use [pass](https://www.passwordstore.org/) or [blackbox](https://github.com/StackExchange/blackbox) to store credentials encrypted with GPG.
 
 <%= warning_text('Make sure you configure the repo as <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/about-repository-visibility">internal or ideally private</a> to help prevent accidental disclosure') %>
 
@@ -51,4 +51,4 @@ Deployed services sometimes need sensitive configuration such as API keys and IP
 
 Use the secret management feature of your infrastructure or cloud provider e.g. [AWS Secrets Manager](https://aws.amazon.com/secrets-manager/getting-started/), [HashiCorp Vault](https://www.vaultproject.io/). This should make it easy to control and audit access to the credentials.
 
-Older projects in DLUHC might have a "secrets" repository and use GPG to encrypt files, which are then decrypted during the deployment process. This approach should not be used unless there is no better option.
+Older projects in MHCLG might have a "secrets" repository and use GPG to encrypt files, which are then decrypted during the deployment process. This approach should not be used unless there is no better option.
