--- a/source/standards/threat-modelling.html.md.erb
+++ b/source/standards/threat-modelling.html.md.erb
@@ -27,9 +27,9 @@ The best time to perform threat modelling activities is during the design phase;
 however, it can be done anytime and should become a continuous process in your
 service team.
 
-Within DLUHC, the Cyber Security Team can support you with threat modelling your service, as well as advising you should you decide to carry it out yourself or through a third party. 
+Within MHCLG, the Cyber Security Team can support you with threat modelling your service, as well as advising you should you decide to carry it out yourself or through a third party.
 
-Within DLUHC, we follow the [Threat Modeling Manifesto][]'s
+Within MHCLG, we follow the [Threat Modeling Manifesto][]'s
 four questions:
 
 1. What are we working on?
