--- a/source/standards/web-application-firewall.html.md.erb
+++ b/source/standards/web-application-firewall.html.md.erb
@@ -16,7 +16,7 @@ Combining a WAF with CI and CD tools reduces the risk from those tools, and prov
 
 You may also need to use a WAF because of:
 
-- DLUHC or departmental policies or standards
+- MHCLG or departmental policies or standards
 - [Information Assurance (IA)](https://sites.google.com/a/digital.cabinet-office.gov.uk/gds/gds-operations/information-services/information-assurance) requirements to minimise risk
 - [Payment Card Industry Data Security Standard (PCI DSS)](https://www.pcisecuritystandards.org/) compliance
 
@@ -77,7 +77,7 @@ GOV.UK Pay operates under the governance of [PCI compliance and DSS point 6.6](h
 
 ## Contact Cyber Security
 
-Contact the security architects in the DLUHC Cyber Security team by email at [cyber.security@digital.cabinet-office.gov.uk](mailto:cyber.security@digital.cabinet-office.gov.uk) or use the [#cyber-security-help Slack channel](https://gds.slack.com/messages/CCMPJKFDK/) for help and advice.
+Contact the security architects in the MHCLG Cyber Security team by email at [cyber.security@digital.cabinet-office.gov.uk](mailto:cyber.security@digital.cabinet-office.gov.uk) or use the [#cyber-security-help Slack channel](https://gds.slack.com/messages/CCMPJKFDK/) for help and advice.
 
 ## Further reading
 
