--- a/source/accessibility.html.md.erb
+++ b/source/accessibility.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Accessibility statement for the DLUHC Way
+title: Accessibility statement for the MHCLG Way
 last_reviewed_on: 2000-01-01
 review_in: 6 months
 hide_in_navigation: true
@@ -7,9 +7,9 @@ hide_in_navigation: true
 
 # Accessibility
 
-This accessibility statement applies to the DLUHC Way at <https://the-dluhc.digital.cabinet-office.gov.uk/>.
+This accessibility statement applies to the MHCLG Way at <https://the-mhclg.digital.cabinet-office.gov.uk/>.
 
-This website is run by the DLUHC Way team at the Government Digital Service (DLUHC). We want as many people as possible to be able to use this website. For example, that means you should be able to:
+This website is run by the MHCLG Way team at the Government Digital Service (MHCLG). We want as many people as possible to be able to use this website. For example, that means you should be able to:
 
 + change colours, contrast levels and fonts
 + zoom in up to 300% without problems
@@ -31,13 +31,13 @@ This website is fully compliant with the [Web Content Accessibility Guidelines v
 
 ### Feedback and contact information
 
-If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, contact [the-dluhc-accessibility@digital.cabinet-office.gov.uk](mailto:the-dluhc-accessibility@digital.cabinet-office.gov.uk) with details of your request.
+If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, contact [the-mhclg-accessibility@digital.cabinet-office.gov.uk](mailto:the-mhclg-accessibility@digital.cabinet-office.gov.uk) with details of your request.
 
 We’ll aim to reply within 3 working days.
 
 ### Reporting accessibility problems with this website
 
-We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, email [the-dluhc-accessibility@digital.cabinet-office.gov.uk](mailto:the-dluhc-accessibility@digital.cabinet-office.gov.uk).
+We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, email [the-mhclg-accessibility@digital.cabinet-office.gov.uk](mailto:the-mhclg-accessibility@digital.cabinet-office.gov.uk).
 
 ### Enforcement procedure
 
