--- a/source/manuals/accessibility.html.md.erb
+++ b/source/manuals/accessibility.html.md.erb
@@ -2,7 +2,7 @@
 title: Building accessible services
 last_reviewed_on: 2000-01-01
 review_in: 6 months
-owner_slack: '#dluhc-way'
+owner_slack: '#mhclg-way'
 ---
 
 # <%= current_page.data.title %>
