--- a/source/manuals/browser-support.html.md.erb
+++ b/source/manuals/browser-support.html.md.erb
@@ -2,13 +2,13 @@
 title: Supporting different browsers
 last_reviewed_on: 2000-01-01
 review_in: 12 months
-owner_slack: '#dluhc-way'
+owner_slack: '#mhclg-way'
 ---
 
 # <%= current_page.data.title %>
 
 Test your service in [the browsers listed in the Service Manual](https://www.gov.uk/service-manual/technology/designing-for-different-browsers-and-devices).
 
-Internal facing services should prioritise Edge, as this is the only offered browser available within DLUHC.
+Internal facing services should prioritise Edge, as this is the only offered browser available within MHCLG.
 
 You should also [test your service with assistive technologies](/manuals/accessibility.html#testing-with-assistive-technologies).
