--- a/source/manuals/programming-languages/js.html.md.erb
+++ b/source/manuals/programming-languages/js.html.md.erb
@@ -2,7 +2,7 @@
 title: JavaScript coding style
 last_reviewed_on: 2000-01-01
 review_in: 12 months
-owner_slack: '#dluhc-way'
+owner_slack: '#mhclg-way'
 ---
 
 # <%= current_page.data.title %>
