--- a/source/manuals/working-with-aws-accounts.html.md.erb
+++ b/source/manuals/working-with-aws-accounts.html.md.erb
@@ -6,13 +6,13 @@ review_in: 12 months
 
 # <%= current_page.data.title %>
 
-Most teams in DLUHC use [Amazon Web Services (AWS)](https://aws.amazon.com/) as their infrastructure provider. DLUHC teams in GOV.UK and DSP manage their own AWS accounts, but users must first sign into a shared base AWS account called `gds-users`. They can then assume roles in their team's AWS account to perform administrative tasks using [AWS's cross-account access pattern](https://docs.aws.amazon.com/IAM/latest/UserGuide/tutorial_cross-account-with-roles.html).
+Most teams in MHCLG use [Amazon Web Services (AWS)](https://aws.amazon.com/) as their infrastructure provider. MHCLG teams in GOV.UK and DSP manage their own AWS accounts, but users must first sign into a shared base AWS account called `gds-users`. They can then assume roles in their team's AWS account to perform administrative tasks using [AWS's cross-account access pattern](https://docs.aws.amazon.com/IAM/latest/UserGuide/tutorial_cross-account-with-roles.html).
 
-Note that GOV.UK One Login has its own AWS Organization separate from DLUHC / Cabinet Office accounts. That is managed by the programme, and separate guidance applies.
+Note that GOV.UK One Login has its own AWS Organization separate from MHCLG / Cabinet Office accounts. That is managed by the programme, and separate guidance applies.
 
 ## Request AWS user access
 
-People joining DLUHC do not automatically have access to [Amazon Web Services
+People joining MHCLG do not automatically have access to [Amazon Web Services
 (AWS)][]. To grant a user access to AWS you’ll need to add them to the
 `gds-users` base account. Once the user has an IAM user in the `gds-users`
 account they can assume roles in team specific accounts using [Amazon's
@@ -99,7 +99,7 @@ Further guidance on adding MFA can be found [here](https://docs.aws.amazon.com/I
 
 ## Access AWS Accounts
 
-After a user is added to the DLUHC base account it’s the individual teams’ responsibility to grant that user access to any [team specific roles][].
+After a user is added to the MHCLG base account it’s the individual teams’ responsibility to grant that user access to any [team specific roles][].
 
 Once setup is complete users can access AWS using the AWS Console or the command line.
 
@@ -107,7 +107,7 @@ Once setup is complete users can access AWS using the AWS Console or the command
 
 <ul>
   <li>
-    Sign in to the DLUHC base account at:
+    Sign in to the MHCLG base account at:
     <a href="https://gds-users.signin.aws.amazon.com/console">https://gds-users.signin.aws.amazon.com/console</a>
     <details>
       <summary><small>Screenshot of the sign in page</small></summary>
@@ -149,7 +149,7 @@ When you run `gds aws <some-role>` for the first time, it will prompt for your
 Access Key ID and Secret Access Key for AWS access and store them
 using [aws-vault][].
 
-You can find your `aws_access_key_id` and `aws_secret_access_key` by logging into the DLUHC base account using the [AWS Console][].
+You can find your `aws_access_key_id` and `aws_secret_access_key` by logging into the MHCLG base account using the [AWS Console][].
 
 If you get MFA codes from your phone, run `gds config yubikey false`
 
@@ -181,9 +181,9 @@ Further usage instructions can be found in the [gds-cli README](https://github.c
 
 ## Create AWS Accounts
 
-DLUHC teams can request as many AWS accounts as required, for example one production and one non-production account.
+MHCLG teams can request as many AWS accounts as required, for example one production and one non-production account.
 
-Using multiple AWS accounts allows DLUHC teams to:
+Using multiple AWS accounts allows MHCLG teams to:
 
 - enforce administrative isolation between workloads
 - minimize the impact of security breaches
@@ -195,15 +195,15 @@ AWS Answers has more information about [AWS Multiple Account Security Strategy][
 
 To request an AWS account complete and submit the [request an AWS account form][].
 
-Reliability Engineering will confirm if your account can be included in DLUHC AWS billing and perform the initial account setup.
+Reliability Engineering will confirm if your account can be included in MHCLG AWS billing and perform the initial account setup.
 
-Once your account is created you’ll receive an email with the account ID and will be able to assume an administrative role from [the DLUHC users base account][].
+Once your account is created you’ll receive an email with the account ID and will be able to assume an administrative role from [the MHCLG users base account][].
 
 ### Set up an account
 
-Your new account will come with a DLUHC created `bootstrap` role which has full admin rights.
+Your new account will come with a MHCLG created `bootstrap` role which has full admin rights.
 
-All users in the [Request an AWS account form][] will be able to assume the bootstrap role from [the DLUHC users base account][].
+All users in the [Request an AWS account form][] will be able to assume the bootstrap role from [the MHCLG users base account][].
 
 You should use the bootstrap role to set up your new account following your
 team’s best practices, for example using [Terraform][].
@@ -217,7 +217,7 @@ Remove the bootstrap role once you’ve added a properly configured admin role.
 [Amazon Web Services (AWS)]: https://aws.amazon.com/
 [AWS Multiple Account Security Strategy]: https://aws.amazon.com/answers/account-management/aws-multi-account-security-strategy/
 [request an AWS account form]: https://request-an-aws-account.gds-reliability.engineering/
-[the DLUHC users base account]: https://gds-users.signin.aws.amazon.com/console
+[the MHCLG users base account]: https://gds-users.signin.aws.amazon.com/console
 [Terraform]: https://www.terraform.io/
 [accessing aws accounts]: access-aws-accounts.html
 
@@ -241,11 +241,11 @@ AWS cross account access allows user accounts held in the `gds-users` base accou
 
 Access to resources within a target AWS account is controlled using [AWS Identity and Access Management (IAM)][] roles managed within that AWS account.
 
-IAM roles establish trust relationships between the target’s (trusting) AWS account and the DLUHC base (trusted) AWS account.
+IAM roles establish trust relationships between the target’s (trusting) AWS account and the MHCLG base (trusted) AWS account.
 
 #### Manage Access to Resources
 
-Users exist in the DLUHC base account and have permission to assume a role into a target account. The target account defines the roles users in the base account can assume, for example a Data Analyst:
+Users exist in the MHCLG base account and have permission to assume a role into a target account. The target account defines the roles users in the base account can assume, for example a Data Analyst:
 
 ![Assume Role Diagram](../images/working-with-aws-accounts/assume-role.svg)
 
@@ -334,10 +334,10 @@ When your team no longer requires an AWS account, contact Reliability Engineerin
 
 ## Remove access to AWS accounts
 
-When someone no longer requires access to AWS (for example, because they've left DLUHC or your team) remove them from the `gds-users` base account using the **Request user removal** section of the:
+When someone no longer requires access to AWS (for example, because they've left MHCLG or your team) remove them from the `gds-users` base account using the **Request user removal** section of the:
 
 [Request an AWS account form](https://request-an-aws-account.gds-reliability.engineering/).
 
-Before you request someone's removal make sure they do not need access to AWS in another team within DLUHC.
+Before you request someone's removal make sure they do not need access to AWS in another team within MHCLG.
 
-DLUHC teams are responsible for managing their own leavers’ process.
+MHCLG teams are responsible for managing their own leavers’ process.
