--- a/source/partials/_nav-operating-a-service.html.erb
+++ b/source/partials/_nav-operating-a-service.html.erb
@@ -6,7 +6,7 @@
   <li><a href="/standards/how-to-do-penetration-tests.html">How to do penetration testing</a></li>
   <li><a href="/standards/performance-testing.html">Performance testing</a></li>
   <li><a href="/standards/sending-email.html">How to send email notifications</a></li>
-  <li><a href="/standards/user-support.html">How DLUHC provides user support</a></li>
+  <li><a href="/standards/user-support.html">How MHCLG provides user support</a></li>
   <li><a href="/standards/incident-management.html">Incident management</a></li>
   <li><a href="/standards/disaster-recovery.html">Disaster Recovery</a></li>
   <li><a href="/standards/principle-least-access.html">Principle of least privilege</a></li>
