--- a/source/standards/alerting.html.md.erb
+++ b/source/standards/alerting.html.md.erb
@@ -24,7 +24,7 @@ You must set up your alerts to distinguish between when something is wrong for a
 
 ### When you should not send an alert
 
-You do not need to send an alert if no action is needed. For example, an alert showing a system's status is really a monitoring tool and you should use a dashboard to display this information instead. The DLUHC Way has more guidance on [how to monitor your service][].
+You do not need to send an alert if no action is needed. For example, an alert showing a system's status is really a monitoring tool and you should use a dashboard to display this information instead. The MHCLG Way has more guidance on [how to monitor your service][].
 
 Specific examples of issues that should not trigger an alert include:
 
@@ -65,7 +65,7 @@ We recommend using dashboards and information radiators, also known as Big Visib
 For more information refer to the:
 
 * Service Manual for [more information on how to write alerts][]
-* DLUHC Way for [information about monitoring][]
+* MHCLG Way for [information about monitoring][]
 * Google SRE handbook to find out more about [site reliability engineering][]
 
 [service monitoring]: /standards/monitoring.html
