--- a/source/standards/configuration-management.html.md.erb
+++ b/source/standards/configuration-management.html.md.erb
@@ -25,7 +25,7 @@ multiple versions.
 ### Code analysis
 
 There are a number of Terraform focused static analysis tools in use at
-DLUHC. While none of them are yet ubiquitous they can help ensure your
+MHCLG. While none of them are yet ubiquitous they can help ensure your
 code is more idiomatic, consistent and secure and you should consider the
 benefits they could bring to your build pipelines.
 
