--- a/source/standards/dns-hosting.html.md.erb
+++ b/source/standards/dns-hosting.html.md.erb
@@ -8,7 +8,7 @@ review_in: 12 months
 
 To ensure users can connect to your service, you'll need accurate Domain Name System (DNS) records and a DNS provider to supply your DNS nameservers.
 
-You can find information on choosing where to host your DNS and how to request nameserver delegation at DLUHC in the [Service Manual][].
+You can find information on choosing where to host your DNS and how to request nameserver delegation at MHCLG in the [Service Manual][].
 
 As part of your DNS strategy and planning you need to ensure:
 
