--- a/source/standards/how-to-do-penetration-tests.html.md.erb
+++ b/source/standards/how-to-do-penetration-tests.html.md.erb
@@ -6,7 +6,7 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
-You should aim to run [penetration tests](https://www.gov.uk/service-manual/technology/vulnerability-and-penetration-testing) on your service at least every 12 months. You must discuss all significant changes with the DLUHC [Information Security] IA team. You must agree with the [Information Security] IA team when you will test and the scope of the tests. They will also assist with the procurement of external tests through an approved third party through the [National Cyber Security Centre (NCSC) CHECK scheme]. Alternatively, with the agreement of the IA team, a member of the [COD Cyber] Team can carry them out internally, depending on the requirements.
+You should aim to run [penetration tests](https://www.gov.uk/service-manual/technology/vulnerability-and-penetration-testing) on your service at least every 12 months. You must discuss all significant changes with the MHCLG [Information Security] IA team. You must agree with the [Information Security] IA team when you will test and the scope of the tests. They will also assist with the procurement of external tests through an approved third party through the [National Cyber Security Centre (NCSC) CHECK scheme]. Alternatively, with the agreement of the IA team, a member of the [COD Cyber] Team can carry them out internally, depending on the requirements.
 
 You may need to schedule additional testing if you make significant changes to your service. You should meet with the IA team regularly to discuss ongoing changes.
 
@@ -69,7 +69,7 @@ To prepare your test environment you should:
 * notify your service providers in advance, for example by [emailing GOV.UK PaaS Support](mailto:gov-uk-paas-support@digital.cabinet-office.gov.uk) - note that in most cases AWS do not require advance permission for penetration tests on your applications
 * give the tester a distribution list of approved report recipients
 
-Prior to the test, it may be beneficial to meet the lead tester and the DLUHC IA Team to discuss the test and confirm that all the prerequisites and necessary access are in place
+Prior to the test, it may be beneficial to meet the lead tester and the MHCLG IA Team to discuss the test and confirm that all the prerequisites and necessary access are in place
 
 ## During the Test
 The lead tester should draw your attention and that of the [Information Security] IA team to any critical vulnerabilities immediately identified
@@ -78,7 +78,7 @@ It is advisable to meet at the end of each day with the lead tester and the IA T
 
 ## What to do after testing
 
-After your test, you should meet with the DLUHC IA team to discuss and triage (risk assess) the test results. You can then prioritise work to mitigate any issues identified in the test and schedule a retest if needed.
+After your test, you should meet with the MHCLG IA team to discuss and triage (risk assess) the test results. You can then prioritise work to mitigate any issues identified in the test and schedule a retest if needed.
 
 Teams should work with the [COD Cyber] team, who can give advice, consult on fixing any issues and take appropriate further action when required.
 
