--- a/source/standards/incident-management.html.md.erb
+++ b/source/standards/incident-management.html.md.erb
@@ -6,16 +6,16 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
-DLUHC incident management focuses on restoring normal operations quickly with minimal impact on users.
+MHCLG incident management focuses on restoring normal operations quickly with minimal impact on users.
 
-Technical incidents may also be cyber security or data loss incidents. You must report all suspected or actual cyber security incidents to the COD Cyber Security team and to the DLUHC Information Security team. You must report all actual or suspected data breach incidents to the DLUHC Information Management team. These requirements should be included in your service manual/guides/processes. Check the DLUHC Wiki for current contact details.
+Technical incidents may also be cyber security or data loss incidents. You must report all suspected or actual cyber security incidents to the COD Cyber Security team and to the MHCLG Information Security team. You must report all actual or suspected data breach incidents to the MHCLG Information Management team. These requirements should be included in your service manual/guides/processes. Check the MHCLG Wiki for current contact details.
 
 ## Define incident priority
 
 Define technical incident priority levels for your service’s applications. For example potential incidents include:
 
 - system access problems
-- wider technical failures with possible reputational impact to DLUHC
+- wider technical failures with possible reputational impact to MHCLG
 - denial of service (DoS)
 - data breach or leak
 - defacement
@@ -122,7 +122,7 @@ You should:
 
 #### 9. Communicate to a wider audience
 
-If the incident is serious (P1 or P2) you’ll need to contact a wider DLUHC audience and potentially your service users.
+If the incident is serious (P1 or P2) you’ll need to contact a wider MHCLG audience and potentially your service users.
 
 Your communications lead must manage:
 
@@ -135,7 +135,7 @@ Make sure internal and external parties, like Information Assurance (IA) or your
 
 For example, teams including [GOV.UK Platform as a Service (PaaS)](https://status.cloud.service.gov.uk/), [GOV.UK Notify](https://www.notifications.service.gov.uk/) and [GOV.UK Pay](https://www.payments.service.gov.uk/) use the [StatusPage service](https://www.atlassian.com/software/statuspage) to trigger notifications to subscribed users.
 
-Post regular updates to the status of an incident in the [#incident Slack channel](https://gds.slack.com/messages/CAD6S2B9Q). This helps people across DLUHC without having to find and follow multiple notification mechanisms for the different programmes.
+Post regular updates to the status of an incident in the [#incident Slack channel](https://gds.slack.com/messages/CAD6S2B9Q). This helps people across MHCLG without having to find and follow multiple notification mechanisms for the different programmes.
 
 **Incident escalations**
 
@@ -149,18 +149,18 @@ Depending on the incident, the NCSC may be able to provide technical support.
 
 #### 10. Resolve the incident
 
-Hold an incident and lesson learned review following a [blameless post mortem culture](https://codeascraft.com/2012/05/22/blameless-postmortems/) so your service can improve. Add a row to the central [DLUHC incidents summary spreadsheet](https://docs.google.com/spreadsheets/d/1TmKiIAUr6EH1XZa5MJquSyHGZnQBjrORUJjs6l4TwHU) linking to your incident report document.
+Hold an incident and lesson learned review following a [blameless post mortem culture](https://codeascraft.com/2012/05/22/blameless-postmortems/) so your service can improve. Add a row to the central [MHCLG incidents summary spreadsheet](https://docs.google.com/spreadsheets/d/1TmKiIAUr6EH1XZa5MJquSyHGZnQBjrORUJjs6l4TwHU) linking to your incident report document.
 
 ## Example incident management
 
-Read the GOV.UK PaaS and Digital Marketplace incident management processes (note that the Digital Marketplace is now run by the Crown Commercial Service, but the incident management guideance was created when it was part of DLUHC/CDIO):
+Read the GOV.UK PaaS and Digital Marketplace incident management processes (note that the Digital Marketplace is now run by the Crown Commercial Service, but the incident management guideance was created when it was part of MHCLG/CDIO):
 
 - GOV.UK PaaS [incident management process](https://team-manual.cloud.service.gov.uk/incident_management/incident_process/)
 - Digital Marketplace [incident response manual](https://alphagov.github.io/digitalmarketplace-manual/2nd-line-runbook/incidents.html)
 
 ## Further reading
 
-Read the [DLUHC Technical Incident Management Framework and Process](https://docs.google.com/document/d/1jfdS6cmxYe7AmM50BSDYU0i6MdaVlOomuacwer70_rc/edit) document for more information. For example, you can read more about:
+Read the [MHCLG Technical Incident Management Framework and Process](https://docs.google.com/document/d/1jfdS6cmxYe7AmM50BSDYU0i6MdaVlOomuacwer70_rc/edit) document for more information. For example, you can read more about:
 
 - classifying incidents
 - routes to support
@@ -171,6 +171,6 @@ Read the [DLUHC Technical Incident Management Framework and Process](https://doc
 
 Contact the Support Operations team using the [#user-support Slack channel](https://gds.slack.com/messages/CADFJBDQU/details/#).
 
-[^1]: Note that this document can only be accessed by people within DLUHC.
+[^1]: Note that this document can only be accessed by people within MHCLG.
 
 [incident-report-template]: https://docs.google.com/document/d/1YDA13RU6wicXoKgDv5VucJe3o_Z0k_Qhug9EJC_XdSE/
