--- a/source/standards/monitoring.html.md.erb
+++ b/source/standards/monitoring.html.md.erb
@@ -6,7 +6,7 @@ review_in: 3 months
 
 # <%= current_page.data.title %>
 
-In Cabinet Office Digital and DLUHC, we follow the Service Manual guidance on how to [monitor the status of services][] and set [performance metrics][].
+In Cabinet Office Digital and MHCLG, we follow the Service Manual guidance on how to [monitor the status of services][] and set [performance metrics][].
 
 We recommend using [Pingdom][] to monitor your service’s availability from outside our network. To further make sure your service is working, you should:
 
@@ -19,7 +19,7 @@ We recommend using [Pingdom][] to monitor your service’s availability from out
 
 Collecting metrics on the performance of your service is useful for [capacity planning][] and autoscaling. You should apply metrics-based monitoring to measure aggregated numerical data about your service and create [Grafana][] dashboards to view metrics from your datasource, for example related to your infrastructure or application.
 
-We recommend using [Prometheus][] to gather metrics and monitor your service, as this is what many DLUHC teams are using. Amazon provides a [Managed Prometheus service][], which you may wish to use instead of hosting Prometheus yourself. You may also consider using [CloudWatch Metrics][] instead for simpler use-cases where the complexity of Prometheus is not required.
+We recommend using [Prometheus][] to gather metrics and monitor your service, as this is what many MHCLG teams are using. Amazon provides a [Managed Prometheus service][], which you may wish to use instead of hosting Prometheus yourself. You may also consider using [CloudWatch Metrics][] instead for simpler use-cases where the complexity of Prometheus is not required.
 
 [monitor the status of services]: https://www.gov.uk/service-manual/technology/monitoring-the-status-of-your-service
 [performance metrics]: https://www.gov.uk/service-manual/measuring-success/how-to-set-performance-metrics-for-your-service
