--- a/source/standards/performance-testing.html.md.erb
+++ b/source/standards/performance-testing.html.md.erb
@@ -40,7 +40,7 @@ Inform people affected by your test. For example, tell developers or content spe
 
 You do not need to fully hand code your tests because most load testing tools like [Gatling](https://gatling.io/), include scenario recorders. Some test scenarios may still need manual preparation, for example, providing lists of test users or specific search terms.
 
-Gatling is a popular load testing tool used by many teams in DLUHC and CDIO including [GOV.UK](https://www.gov.uk/), [GOV.UK Pay](https://www.payments.service.gov.uk/), and [GOV.UK Notify](https://www.notifications.service.gov.uk/).
+Gatling is a popular load testing tool used by many teams in MHCLG and CDIO including [GOV.UK](https://www.gov.uk/), [GOV.UK Pay](https://www.payments.service.gov.uk/), and [GOV.UK Notify](https://www.notifications.service.gov.uk/).
 
 The SPOT Team on Digital Identity have had success using [K6](https://www.k6.io), a performance testing framework built in Go and scripted in Javascript.
 
@@ -73,7 +73,7 @@ For these reasons, you should run your tests on a more dedicated platform, such 
 
 ### Running your tests on dedicated infrastructure
 
-Running your performance tests on dedicated infrastructure is usually the better option. If you are a public sector organisation (such as DLUHC), you will likely already have access to a cloud compute supplier such as AWS, Azure or Google Cloud and can run your tests on a compute instance, or as a container on an orchestration platform like ECS or Kubernetes.
+Running your performance tests on dedicated infrastructure is usually the better option. If you are a public sector organisation (such as MHCLG), you will likely already have access to a cloud compute supplier such as AWS, Azure or Google Cloud and can run your tests on a compute instance, or as a container on an orchestration platform like ECS or Kubernetes.
 
 ### Running your tests on Software-as-a-Service (SaaS)
 
