--- a/source/standards/technical-debt.html.md.erb
+++ b/source/standards/technical-debt.html.md.erb
@@ -6,7 +6,7 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
-While planning for the technical work we do in DLUHC, we need a common language
+While planning for the technical work we do in MHCLG, we need a common language
 between technologists and product people to describe the scale and scope of
 technical debt.
 
