--- a/source/standards/understanding-risks.html.md.erb
+++ b/source/standards/understanding-risks.html.md.erb
@@ -8,7 +8,7 @@ review_in: 6 months
 
 When you build, maintain or change your service, you must have a clear understanding of any associated risks because they will impact your service design and affect your users.
 
-You should work with [DLUHC Information Security IA] to design appropriate solutions for your service's risks. IA may need to obtain risk acceptance from your Senior Risk Owner (SRO).
+You should work with [MHCLG Information Security IA] to design appropriate solutions for your service's risks. IA may need to obtain risk acceptance from your Senior Risk Owner (SRO).
 You can also work with the [COD Cyber Security Team] to get advice on the threats applicable to your service, and how to best mitigate them.
 
 The Service Manual has some recommendations which can reduce risk to your service, for example, how to:
@@ -20,7 +20,7 @@ The government security hub [security.gov.uk][securityhub] provides links to the
 
 ## Model security threats
 
-[Modelling threats][] can help you gain a clearer understanding of threats against your service. DLUHC uses [Attack Tree][] development workshops to model threats. Any workshops you run should cover all potential [attack vectors][].
+[Modelling threats][] can help you gain a clearer understanding of threats against your service. MHCLG uses [Attack Tree][] development workshops to model threats. Any workshops you run should cover all potential [attack vectors][].
 
 The Cabinet Office Cyber Security Team can help you carry out threat modelling, to help you:
 
@@ -37,7 +37,7 @@ You will find more information on threat modelling on the [COD Cyber Security Te
 
 The [National Cyber Security Centre (NCSC)] provides guidance about cyber security. The Service Manual has advice about [securing your information] and [securing your cloud environment].
 
-[DLUHC Information Security IA]: https://sites.google.com/a/digital.cabinet-office.gov.uk/gds/directorates-and-groups/cto-and-ciso-office/information-security
+[MHCLG Information Security IA]: https://sites.google.com/a/digital.cabinet-office.gov.uk/gds/directorates-and-groups/cto-and-ciso-office/information-security
 [COD Cyber Security Team]: https://sites.google.com/cabinetoffice.gov.uk/cybersecurity/our-services/threat-modelling
 [protect against fraud]: https://www.gov.uk/service-manual/technology/protecting-your-service-against-fraud
 [secure your information]: https://www.gov.uk/service-manual/technology/securing-your-information
