--- a/source/standards/user-support.html.md.erb
+++ b/source/standards/user-support.html.md.erb
@@ -1,23 +1,23 @@
 ---
-title: How DLUHC provides user support
+title: How MHCLG provides user support
 last_reviewed_on: 2000-01-01
 review_in: 6 months
 ---
 
 # <%= current_page.data.title %>
 
-The Support Operations team help DLUHC service teams respond to user enquiries, providing 1st line support for many teams within DLUHC including [GOV.UK](https://www.gov.uk/) and [GOV.UK Verify](https://www.gov.uk/government/publications/introducing-govuk-verify/introducing-govuk-verify).
+The Support Operations team help MHCLG service teams respond to user enquiries, providing 1st line support for many teams within MHCLG including [GOV.UK](https://www.gov.uk/) and [GOV.UK Verify](https://www.gov.uk/government/publications/introducing-govuk-verify/introducing-govuk-verify).
 
 ## Zendesk
 
-Support Operations require DLUHC teams to use [Zendesk](https://www.zendesk.com/) to manage communications with service users. Support Operations work with DLUHC teams to help manage Zendesk setup and configuration, for example with:
+Support Operations require MHCLG teams to use [Zendesk](https://www.zendesk.com/) to manage communications with service users. Support Operations work with MHCLG teams to help manage Zendesk setup and configuration, for example with:
 
 - choosing agent types, groups and ‘pass-through’ to other government departments
 - [General Data Protection Regulation (GDPR)](https://ico.org.uk/for-organisations/guide-to-data-protection/guide-to-the-general-data-protection-regulation-gdpr/) considerations, such as data disclosure and data retention
 
 ## Support lines for your service
 
-DLUHC teams provide support in 3 groups, known as ‘lines’, for each product.
+MHCLG teams provide support in 3 groups, known as ‘lines’, for each product.
 
 ### 1st line user support
 
@@ -39,7 +39,7 @@ Understanding your service’s routes into support will make sure support and pr
 
 ## Support hours and support rotas
 
-Document and share your support team’s operating hours. Many DLUHC teams operate a rota for their 2nd line support and escalation contacts.
+Document and share your support team’s operating hours. Many MHCLG teams operate a rota for their 2nd line support and escalation contacts.
 
 ## Further reading
 
